@@ -1,6 +1,7 @@
 Документация
 ------------
 
+* документировать dvr api
 * wwwroot -> root
 * получше реструктуризовать документацию
 * починить ссылку про кластеризацию
@@ -10,7 +11,7 @@
 Фичи
 ----
 
-
+* добавить тесты на чтение RTSP файлов
 * добавить экспорт логов из веб-интерфейса
 * статистика по архиву: заполнение жесткого диска и карта общей записи
 * messaging связанный с сессиями
