@@ -53,20 +53,62 @@ fetch(URL, Options) when is_binary(URL) ->
 
 
 parse(Bin) when is_binary(Bin) ->
-  Lines = [L || L <- binary:split(Bin, [<<"\r">>, <<"\n">>], [global]), L =/= <<>>],
-  detect_playlist_type(Lines).
+  Lines1 = [L || L <- binary:split(Bin, [<<"\r">>, <<"\n">>], [global]), L =/= <<>>],
+  Lines2 = tokenize(Lines1),
+  detect_playlist_type(Lines2).
 
 
-detect_playlist_type([<<"#EXTM3U">>|Lines]) ->
-  detect_playlist_type(Lines);
+tokenize([<<"#EXTM3U">>|Lines]) ->
+  tokenize(Lines);
 
-detect_playlist_type([<<"#EXT-X-VERSION:",_/binary>>|Lines]) ->
-  detect_playlist_type(Lines);
+tokenize([<<"#EXT-X-VERSION:",_/binary>>|Lines]) ->
+  tokenize(Lines);
 
-detect_playlist_type([<<"#EXT-X-MEDIA:",_/binary>>|_] = Lines) ->
+tokenize([<<"#EXT-X-STREAM-INF:", Opts/binary>>|Lines]) ->
+  Options = [ list_to_tuple(binary:split(Opt, <<"=">>)) || Opt <- binary:split(Opts, [<<" ">>, <<",">>],[global]), Opt =/= <<>>],
+  Bitrate = to_i(proplists:get_value(<<"BANDWIDTH">>, Options)),
+  [{stream_inf,[{bitrate,Bitrate}|Options]}|tokenize(Lines)];
+
+tokenize([<<"#EXT-X-MEDIA-SEQUENCE:",Sequence/binary>>|Lines]) ->
+  [{sequence,to_i(Sequence)}|tokenize(Lines)];
+
+tokenize([<<"#EXT-X-PLAYLIST-TYPE:VOD">>|Lines]) ->
+  [{type,vod}|tokenize(Lines)];
+
+tokenize([<<"#EXT-X-PLAYLIST-TYPE:EVENT">>|Lines]) ->
+  [{type,event}|tokenize(Lines)];
+
+tokenize([<<"#EXT-X-MEDIA:", Media/binary>>|Lines]) ->
+  [{media,parse_x_media(Media)}|tokenize(Lines)];
+
+tokenize([<<"#EXTINF:",Duration/binary>>|Lines]) ->
+  [{duration, to_i_1000(Duration)}|tokenize(Lines)];
+
+tokenize([<<"#EXT-X-UTC:",UTC/binary>>|Lines]) ->
+  [{utc, to_i(UTC)}|tokenize(Lines)];
+
+tokenize([<<"#EXT-X-PROGRAM-DATE-TIME:",Y:4/binary,"-",M:2/binary,"-",D:2/binary,_,H:2/binary,":",Min:2/binary,":",S:2/binary,_/binary>>|Lines]) ->
+  [{date,{{to_i(Y),to_i(M),to_i(D)},{to_i(H),to_i(Min),to_i(S)}}}|tokenize(Lines)];
+
+tokenize([<<"#", _/binary>> = Line|Lines]) ->
+  [{control,Line}|tokenize(Lines)];
+
+tokenize([<<>>|Lines]) ->
+  tokenize(Lines);
+
+tokenize([URL|Lines]) ->
+  [{url,URL}|tokenize(Lines)];
+
+tokenize([]) ->
+  [].
+
+
+
+
+detect_playlist_type([{media,_}|_] = Lines) ->
   read_mbr_playlist(Lines, #m3u8_mbr_playlist{});
 
-detect_playlist_type([<<"#EXT-X-STREAM-INF:",_/binary>>|_] = Lines) ->
+detect_playlist_type([{stream_inf,_}|_] = Lines) ->
   read_mbr_playlist(Lines, #m3u8_mbr_playlist{});
 
 detect_playlist_type(Lines) ->
@@ -74,12 +116,11 @@ detect_playlist_type(Lines) ->
   Playlist.
 
 
-read_mbr_playlist([<<"#EXT-X-MEDIA:",_/binary>>|Lines], Playlist) ->
+read_mbr_playlist([{media,_}|Lines], Playlist) ->
   read_mbr_playlist(Lines, Playlist);
 
-read_mbr_playlist([<<"#EXT-X-STREAM-INF:", Opts/binary>>, URL|Lines], #m3u8_mbr_playlist{playlists = SubLists} = Playlist) ->
-  Options = [ list_to_tuple(binary:split(Opt, <<"=">>)) || Opt <- binary:split(Opts, [<<" ">>, <<",">>],[global]), Opt =/= <<>>],
-  Bitrate = to_i(proplists:get_value(<<"BANDWIDTH">>, Options)),
+read_mbr_playlist([{stream_inf,Opts}, {url,URL}|Lines], #m3u8_mbr_playlist{playlists = SubLists} = Playlist) ->
+  Bitrate = proplists:get_value(bitrate,Opts),
   read_mbr_playlist(Lines, Playlist#m3u8_mbr_playlist{playlists = [#m3u8_playlist{url = URL, bitrate = Bitrate}|SubLists]});
 
 read_mbr_playlist([], #m3u8_mbr_playlist{playlists = SubLists} = Playlist) ->
@@ -87,65 +128,53 @@ read_mbr_playlist([], #m3u8_mbr_playlist{playlists = SubLists} = Playlist) ->
 
 
 
+read_playlist([{sequence,Sequence}|Lines], #m3u8_playlist{} = Playlist, _) ->
+  read_playlist(Lines, Playlist#m3u8_playlist{sequence = Sequence}, Sequence);
 
-read_playlist([<<"#EXT-X-MEDIA-SEQUENCE:",Sequence/binary>>|Lines], Playlist, _) ->
-  SeqNumber = to_i(Sequence),
-  read_playlist(Lines, Playlist#m3u8_playlist{sequence = SeqNumber}, SeqNumber);
-
-read_playlist([<<"#EXT-X-PLAYLIST-TYPE:",Type_/binary>>|Lines], #m3u8_playlist{} = Playlist, Number) ->
-  Type = case Type_ of
-    <<"VOD">> -> vod;
-    <<"EVENT">> -> event;
-    _ -> Type_
-  end,
+read_playlist([{type,Type}|Lines], #m3u8_playlist{} = Playlist, Number) ->
   read_playlist(Lines, Playlist#m3u8_playlist{type = Type}, Number);
 
-read_playlist([<<"#EXT-X-MEDIA:", _/binary>>|_] = Lines, #m3u8_playlist{} = Playlist, undefined) ->
-  read_playlist(Lines, Playlist, 0);
+read_playlist([{media,Entry}|Lines], #m3u8_playlist{entries = Entries} = Playlist, Number) ->
+  read_playlist(Lines, Playlist#m3u8_playlist{entries = [Entry#m3u8_entry{number = Number}|Entries]}, Number+1);
 
-read_playlist([<<"#EXT-X-MEDIA:", Media/binary>>|Lines], #m3u8_playlist{entries = Entries} = Playlist, Number) ->
-  read_playlist(Lines, Playlist#m3u8_playlist{entries = [parse_x_media(Media,Number)|Entries]}, Number+1);
+read_playlist([{Tag, _}|_] = Lines, #m3u8_playlist{} = Playlist, Number) when 
+  Tag == duration; Tag == utc; Tag == date; Tag == url ->
+  read_entry(Lines, Playlist, #m3u8_entry{number = Number});
 
-
-read_playlist([<<"#EXTINF:",_/binary>>|_] = Lines, #m3u8_playlist{} = Playlist, undefined) ->
-  read_playlist(Lines, Playlist, 0);
-
-read_playlist([<<"#EXTINF:",Duration/binary>>|Lines], #m3u8_playlist{} = Playlist, Number) ->
-  SegDuration = to_i_1000(Duration),
-  read_entry(Lines, Playlist, #m3u8_entry{duration = SegDuration, number = Number});
-
-read_playlist([<<"#", _/binary>>|Lines], Playlist, Number) ->
+read_playlist([_|Lines], Playlist, Number) ->
   read_playlist(Lines, Playlist, Number);
-
-read_playlist([_URL|_] = Lines, #m3u8_playlist{} = Playlist, undefined) ->
-  read_playlist(Lines, Playlist, 0);
-
-read_playlist([URL|Lines], #m3u8_playlist{entries = Entries} = Playlist, Number) ->
-  read_playlist(Lines, Playlist#m3u8_playlist{entries = [#m3u8_entry{url = URL, number = Number}|Entries]}, Number+1);
 
 read_playlist([], #m3u8_playlist{entries = Entries} = Playlist, _) ->
   Playlist#m3u8_playlist{entries = lists:reverse(Entries)}.
 
 
+read_entry(Lines, #m3u8_playlist{} = Playlist, #m3u8_entry{number = undefined} = Entry) ->
+  read_entry(Lines, Playlist, Entry#m3u8_entry{number = 0});
 
-read_entry([<<"#", _/binary>>|Lines], Playlist, Entry) ->
-  read_entry(Lines, Playlist, Entry);
+read_entry([{url,URL}|Lines], #m3u8_playlist{entries = Entries} = Playlist, #m3u8_entry{number = N} = Entry) ->
+  read_playlist(Lines, Playlist#m3u8_playlist{entries = [Entry#m3u8_entry{url = URL}|Entries]}, N + 1);
 
-read_entry([URL|Lines], #m3u8_playlist{entries = Entries} = Playlist, #m3u8_entry{number = N} = Entry) ->
-  read_playlist(Lines, Playlist#m3u8_playlist{entries = [Entry#m3u8_entry{url = URL}|Entries]}, N+1);
+read_entry([{utc,UTC}|Lines], Playlist, #m3u8_entry{} = Entry) ->
+  read_entry(Lines, Playlist, Entry#m3u8_entry{utc = UTC});
+
+read_entry([{date,Date}|Lines], Playlist, #m3u8_entry{} = Entry) ->
+  UTC = calendar:datetime_to_gregorian_seconds(Date) - calendar:datetime_to_gregorian_seconds({{1970,1,1}, {0,0,0}}),
+  read_entry(Lines, Playlist, Entry#m3u8_entry{utc = UTC});
+
+read_entry([{duration,Duration}|Lines], Playlist, #m3u8_entry{} = Entry) ->
+  read_entry(Lines, Playlist, Entry#m3u8_entry{duration = Duration});
 
 read_entry([], Playlist, #m3u8_entry{number = N}) ->
-  read_playlist([], Playlist, N).
+  read_playlist([], Playlist, N + 1).
 
 
 
-parse_x_media(Media, Number) when is_binary(Media), is_integer(Number) ->
+parse_x_media(Media) when is_binary(Media) ->
   Attrs1 = [binary:split(A, <<"=">>) || A <- binary:split(Media, <<",">>, [global])],
   Attrs2 = [{K,unquote(V)} || [K,V] <- Attrs1],
   Attrs = Attrs2,
   #m3u8_entry{
-    number = Number
-    ,url = proplists:get_value(<<"URI">>, Attrs)
+    url = proplists:get_value(<<"URI">>, Attrs)
     ,duration = to_i_1000(proplists:get_value(<<"DURATION">>, Attrs))
     ,offset = to_i_1000(proplists:get_value(<<"OFFSET">>, Attrs))
     ,utc = to_i(proplists:get_value(<<"UTC">>, Attrs))
