@@ -10,6 +10,17 @@ parse(Name) ->
 
 
 
+fetch_playlist_mbr_test() ->
+  ?assertMatch(#m3u8_mbr_playlist{
+    playlists = [
+      #m3u8_playlist{url = <<"../test/files/tracks-1,4/index.m3u8">>, bitrate = 1196000},
+      #m3u8_playlist{url = <<"../test/files/tracks-2,4/index.m3u8">>, bitrate = 510000},
+      #m3u8_playlist{url = <<"../test/files/tracks-3,4/index.m3u8">>, bitrate = 155000}
+    ]
+  }, m3u8:fetch("../test/files/playlist-mbr.m3u8")).
+
+
+
 parse_playlist_file_test() ->
   ?assertMatch(#m3u8_playlist{
     sequence = 0,
@@ -46,7 +57,7 @@ parse_playlist_server1_test() ->
     type = live,
     entries = [
       #m3u8_entry{number = 0, url = <<"priv/bunny.mp4">>},
-      #m3u8_entry{number = 1, url = <<"priv/mbr.mp4">>}
+      #m3u8_entry{number = 1, utc = 1360659488, url = <<"priv/mbr.mp4">>}
     ]
   }, parse("server1")).
 
@@ -55,8 +66,8 @@ parse_playlist_server2_test() ->
     sequence = undefined,
     type = live,
     entries = [
-      #m3u8_entry{number = 0, url = <<"ort">>, duration = 20000},
-      #m3u8_entry{number = 1, url = <<"priv/bunny.mp4">>}
+      #m3u8_entry{number = 0, utc = 1360673888, url = <<"ort">>, duration = 20000},
+      #m3u8_entry{number = 1, utc = 1360673918, url = <<"priv/bunny.mp4">>}
     ]
   }, parse("server2")).
 
@@ -80,15 +91,6 @@ fetch_playlist_file_test() ->
     ]
   }, m3u8:fetch("../test/files/playlist-file.m3u8")).
 
-
-fetch_playlist_mbr_test() ->
-  ?assertMatch(#m3u8_mbr_playlist{
-    playlists = [
-      #m3u8_playlist{url = <<"../test/files/tracks-1,4/index.m3u8">>, bitrate = 1196000},
-      #m3u8_playlist{url = <<"../test/files/tracks-2,4/index.m3u8">>, bitrate = 510000},
-      #m3u8_playlist{url = <<"../test/files/tracks-3,4/index.m3u8">>, bitrate = 155000}
-    ]
-  }, m3u8:fetch("../test/files/playlist-mbr.m3u8")).
 
 
 fetch_invalid_playlist_test() ->
