@@ -25,7 +25,7 @@
 <body>
   <div id="container">
     <div id="header">
-      <h1><a href="index.html">Flussonic <span id="flu_version"></span> admin panel</a></h1>
+      <h1><span id="flu_license"></span> Flussonic <span id="flu_version"></span> admin panel</h1>
     </div>
     <div id="wrapper" class="wat-cf">
       <div id="main">
